# kinectv1_object_recognition

Linux-32/: NITE-download.txt  NITE-download.txt~  OpenNI-Linux-x86-2.2.tar.bz2
kinectv1_ros_ws/src/mra7a-indigo-devel/mra7a_description/urdf/: mra7a.urdf  mra7a_gazebo.urdf.xacro
kinectv1_ros_ws/src/mra7a-indigo-devel/mra7a_gazebo/launch/: display.launch~  gazebo.launch~
kinectv1_ros_ws/src/mra7a-indigo-devel/mra7a_gazebo/urdf/: arm_with_ee.urdf.xacro~  mra7a_gazebo.urdf.xacro  mra7a_gazebo.urdf.xacro~  seven_dof_arm.urdf(纯urdf).xacro~  seven_dof_arm.urdf.xacro~  seven_dof_arm_gazebo.urdf.xacro~
kinectv1_ros_ws/src/mra7a-indigo-devel/mra7a_moveit_config/launch/: demo_no_rviz.launch
kinectv1_ros_ws/src/ork/: CMakeLists.txt  package.xml
kinectv1_ros_ws/src/ork/launch/: kinect2_bridge.launch  object_recognition.launch  ork_demo.launch  view_ork.launch
kinectv1_ros_ws/src/ork/rviz/: ork.rviz
kinectv1_ros_ws/src/ork/src/: camera_base_tf_publish.cpp  camera_base_tf_publish.cpp~  ork_transform.cpp  ork_transform.cpp~
